--- a/about_me.html
+++ b/about_me.html
@@ -2,33 +2,81 @@
 <html>
 <head>
 	<title>About Heather</title>
+
+
+<!-- Start Bootstrap -->
+
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+		<!-- End Bootstrap -->
+
+
+
+
+
+
 	<link rel="stylesheet" href="assets/stylesheets/dog.css">
+
+
+
 </head>
 <body>
+<!-- Start NavBar -->
+
+	<div class="container" id="nav">
+		<div class="row">
+			<div class="col-md-4">
+			</div>
+			<div class="col-md-2">
+				<p><a href="index.html#border">Breeds</a></p> 
+			</div>
+			
+			<div class="col-md-3">
+				<p><a href="index.html">Back to Awesome Dogs</a></p>
+			</div>
+			<div class="col-md-2">
+			</div>
+		</div>
+	</div>				
+
+<!-- End NavBar -->
 
 
+<div class="container" >
+	<div class="jumbotron">
+		<h1>Meet Heather!</h1>
 
-
-<h1>Meet Heather!</h1>
-<p class="pics"><img src="assets/images/heather.jpg" width="400" alt="Heather"></p>
-
-
-
-<div class="text">	
-<p> 
-	As a Detroit native, Heather has always been interested in engineering and technology.  She attended Davis Aerospace High School and studied airplane instrumentation.  She continued her education at The University of Michigan in their Electrical Engineering and Computer Science program.  This is where she was first introduced to the world of coding via Fortran and Matlab (Formula Translation)
-</p>
-<p>
-Upon graduation, Heather worked in the Automotive industry designing wiring harnesses for the Big 3 Automotive companies and several foreign car companines. It would be 3 years before Heather entered a career in programming as an SAP/Abap Consultant, specializing in data migration/conversion, batch data processing and electronic data interchange, and user reports.  
-</p>
-
-<p>Today, Heather is working on expanding her skillset with training in HTML, CSS, PHP, Ruby on Rails, and Javascript.</p>
-
+	</div>
 </div>
 
+<p class="pics"><img src="assets/images/heather.jpg" width="400" alt="Heather"></p>
+<div class="container">
+<div class="text">	
+		<p> 
+			As a Detroit native, Heather has always been interested in engineering and technology.  She attended Davis Aerospace High School and studied airplane instrumentation.  She continued her education at The University of Michigan in their Electrical Engineering and Computer Science program.  This is where she was first introduced to the world of coding via Fortran and Matlab (Formula Translation)
+		</p>
+		<p>
+			Upon graduation, Heather worked in the Automotive industry designing wiring harnesses for the Big 3 Automotive companies and several foreign car companines. It would be 3 years before Heather entered a career in programming as an SAP/Abap Consultant, specializing in data migration/conversion, batch data processing and electronic data interchange, and user reports.  
+		</p>
+
+		<p>Today, Heather is working on expanding her skillset with training in HTML, CSS, PHP, Ruby on Rails, and Javascript.</p>
+
+</div>
+</div>
 <p><img src="assets/images/back_arrow.png" width="20"/><a href="index.html">Back to home</a>
 
 
+<!-- Start Bootstrap JS -->
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+		<!-- End Bootstrap JS -->
 </body>
 </html>
