--- a/index.html
+++ b/index.html
@@ -2,46 +2,149 @@
 <html>
 	<head>
 		<title>Dogs Are Awesome</title>
+
+		<!-- Start Bootstrap -->
+
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+		<!-- End Bootstrap -->
+
 		<link rel="stylesheet" href="assets/stylesheets/dog.css">
 	</head>
 	<body>
-		<h1>
-		 <ul>
-		 	<li><img src="assets/images/paw_print.png" width="40"></li>
-		 	<li>Dogs Make Life Awesome!</li>
-		 	<li><img src="assets/images/paw_print.png" width="40"></li>
-		 </ul>
-		</h1>
-		<h2>Experiencing the best in life with <em>Dogs </em></h2>
+
+<!-- Start NavBar -->
+
+	<div class="container" id="nav">
+		<div class="row">
+			<div class="col-md-4">
+			</div>
+			<div class="col-md-2">
+				<p><a href="#border">Breeds</a></p>
+			</div>
+			
+			<div class="col-md-3">
+				<p><a href="about_me.html">About the Author</a></p>
+			</div>
+			<div class="col-md-2">
+			</div>
+		</div>
+	</div>				
+
+<!-- End NavBar -->
 
 
-			<p id="sub">Happiness is life with a dog!</p>
-			<p> 
-			Pet Food pet supplies gimme five puppy cage food feathers food heel feathers running pet gate walk lazy dog Spike. Good Boy park lazy dog walk kibble Scooby snacks licks canary. Maine Coon Cat walk catch water dog slobber chew scratcher ID tag litter tuxedo dog house lazy cat park. Dinnertime fetch throw feathers fleas tongue lazy cat lick throw kitten parrot hamster wag tail aquarium chew heel good boy lick feathers cockatiel. Wet Nose food ferret vaccine finch vaccination Scooby snacks string wagging barky tail head good boy pet gate meow good boy. Commands shake bird biscuit left paw finch bark ferret bark gimme five turtle fur canary. Water puppy dog lick kisses pet supplies slobber cat bird seed. Food sit biscuit groom tongue cage. 
-			</p>
 
-			<p> 
-			Play Dead sit nap lazy dog wet nose Tigger run fast fish lazy cat wagging hamster toy field yawn feathers ferret yawn aquarium.Feathers bird seed food scratcher mouse running teeth licks heel walk pet gate maine coon cat collar twine parakeet. Roll Over kitty barky critters litter stick window litter box wagging field toy. Whiskers harness biscuit food lick small animals throw meow house train. Bedding field hamster small animals carrier polydactyl groom vaccine. Commands running gimme five groom slobber run fast head ball litter box biscuit catch run fast roll over. Roll Over litter box tabby pet slobbery play dead kitty roll over small animals barky good boy string kitty fish licks teeth chew drool. ID Tag barky lick parakeet wet nose ball walk tabby wag tail chirp nest. Spike bird seed water teeth leash ball. Crate pet food stripes carrier drool slobbery tabby dog puppy birds walk roll over bird food Mittens pet supplies.
-			</p>
+	<div class="container">
+		<div class="jumbotron">
+			<h1>
+			 <ul>
+			 	<li><img src="assets/images/paw_print.png" width="40"></li>
+			 	<li>Dogs Make Life Awesome!</li>
+			 	<li><img src="assets/images/paw_print.png" width="40"></li>
+			 </ul>
+			</h1>
+		</div>
+	</div>	
+
+	<div class="container" id="intro">
+		<p>
+			Kogi vinyl readymade post-ironic. Direct trade mlkshk paleo ethical viral, chicharrones tbh. Vegan migas bicycle rights small batch post-ironic. Glossier four loko pop-up bushwick gentrify. Whatever tofu PBR&B locavore. Put a bird on it chia mlkshk flannel. Kitsch flannel mustache VHS, tumblr church-key tilde.
+		</p>
+
+	</div>
 
 
+
+	<div class="container" id="back">
+		<h2>Happiness is life with a dog!</h2>
+	</div>
+
+
+	<div class="container" id="content">		
+			<div class="row">
+				<div class="col-md-2">
+				</div>
+
+				<div class="col-md-8">
+						<p> 
+							Pet Food pet supplies gimme five puppy cage food feathers food heel feathers running pet gate walk lazy dog Spike. Good Boy park lazy dog walk kibble Scooby snacks licks canary. Maine Coon Cat walk catch water dog slobber chew scratcher ID tag litter tuxedo dog house lazy cat park. Dinnertime fetch throw feathers fleas tongue lazy cat lick throw kitten parrot hamster wag tail aquarium chew heel good boy lick feathers cockatiel. Wet Nose food ferret vaccine finch vaccination Scooby snacks string wagging barky tail head good boy pet gate meow good boy. Commands shake bird biscuit left paw finch bark ferret bark gimme five turtle fur canary. Water puppy dog lick kisses pet supplies slobber cat bird seed. Food sit biscuit groom tongue cage. 
+						</p>
+				</div>
+
+				<div class="col-md-2">
+				</div>
+			</div>
+	</div>	
+
+
+
+
+	<div class="container" id="border">
 		<div class="pics">
 			<h2 class="big">So why not get a dog and make your life <em>AWESOME</em>?</h2> 
 
 
 			<p class="text">Consider the following dog breeds, known for the loving disposition and easy-going character: </p>
 
-			<p class="text"><a href="http://www.akc.org/dog-breeds/golden-retriever/" target="_blank">Golden Retriever</p>
-			<p><img src="assets/images/golden.jpeg" alt="Golden Retriever"></p>
+			<div class="row">
+				<div class="col-md-4">
 
-			<p class="text"><a href="http://www.akc.org/dog-breeds/labrador-retriever/" target="_blank">Laborador Retriever</p>
-			<p><img src="assets/images/labs.jpg" alt="Labrador Retriever"></p>
-			<p class="text"><a href="http://www.akc.org/dog-breeds/st-bernard/" target="_blank">Saint Bernard</p>
-			<p><img src="assets/images/saint_bernard.jpeg" alt="Saint Bernard"></p>
+				  <div class="panel panel-success">
+					  <div class="panel-heading">
+					    <h3 class="panel-title"><a href="http://www.akc.org/dog-breeds/golden-retriever/" target="_blank">Golden Retriever</a></h3>
+						</div>
+						<div class="panel-body">
+							<p><img src="assets/images/golden.jpeg" alt="Golden Retriever"></p>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col-md-4">
+
+				  <div class="panel panel-success">
+					  <div class="panel-heading">
+					    <h3 class="panel-title"><a href="http://www.akc.org/dog-breeds/labrador-retriever/" target="_blank">Laborador Retriever</a></h3>
+						</div>
+						<div class="panel-body">
+							<p><img src="assets/images/labs.jpg" alt="Labrador Retriever"></p>
+						</div>
+					</div>
+				</div>						
+
+			<div class="col-md-4">
+				<div class="panel panel-success">
+					<div class="panel-heading">
+					  <h3 class="panel-title"><a href="http://www.akc.org/dog-breeds/st-bernard/" target="_blank">Saint Bernard</a></h3>
+					</div>   	
+					<div class="panel-body">
+						<p><img src="assets/images/saint_bernard.jpeg" alt="Saint Bernard"></p>
+					</div>
+				</div>
+			</div>
 
 
-			
+
+
 		</div>
-		<p class="fonts"><a href="about_me.html">About the Author</a></p>
+	</div>
+	
+	<p><a href="#nav">Back to Top</a></p>
+
+		<!-- Start Bootstrap JS -->
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+		<!-- End Bootstrap JS -->
+
+
 	</body>
 </html>
